--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ chrono = "0.4.35"
 dotenvy = "0.15.7"
 log = "0.4.21"
 log4rs = "1.3.0"
-reqwest = "0.11.25"
+reqwest =  { version = "0.11.25", default-features = false }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde_json = "1.0.114"
 teloxide = { version = "0.12.2", features = ["macros"] }
@@ -25,3 +25,4 @@ debug = false       # Strip debug symbols from the binary.
 
 [profile.dev]
 debug = true
+
