--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ chrono = "0.4.35"
 dotenvy = "0.15.7"
 log = "0.4.21"
 log4rs = "1.3.0"
-reqwest =  { version = "0.11.25", default-features = false }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde_json = "1.0.114"
-teloxide = { version = "0.12.2", features = ["macros"] }
-tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+teloxide = { version = "0.12.2", default-features = false, features = ["macros", "rustls"] }
+tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
+
 
 [profile.release]
 strip = true        # Automatically strip symbols from the binary.
@@ -26,5 +26,23 @@ debug = false       # Strip debug symbols from the binary.
 [profile.dev]
 debug = true
 
-[target.'cfg(target_os = "linux")'.dependencies]
-reqwest = { version = "0.11.25", default-features = false, features = ["rustls-tls"] }
+[target.aarch64-apple-darwin.dependencies]
+reqwest = { version = "0.11.25", features = ["json"]}
+
+[target.x86_64-apple-darwin.dependencies]
+reqwest = { version = "0.11.25", features = ["json"]}
+
+[target.x86_64-pc-windows-gnu.dependencies]
+reqwest = { version = "0.11.25", features = ["json"]}
+
+[target.x86_64-unknown-linux-gnu.dependencies]
+reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-features = false }
+
+[target.x86_64-unknown-linux-musl.dependencies]
+reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-features = false }
+
+[target.aarch64-unknown-linux-musl.dependencies]
+reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-features = false }
+
+[target.aarch64-unknown-linux-gnu.dependencies]
+reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-features = false }
