--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ log = "0.4.21"
 log4rs = "1.3.0"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde_json = "1.0.114"
-teloxide = { version = "0.12.2", default-features = false, features = ["macros", "rustls"] }
+teloxide = { version = "0.12.2", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
 tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 
