--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,6 @@ reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-feat
 
 [target.aarch64-unknown-linux-gnu.dependencies]
 reqwest = { version = "0.11.25", features = ["json", "rustls-tls"], default-features = false }
+
+[target.x86_64-pc-windows-msvc.dependencies]
+reqwest = { version = "0.11.25", features = ["json"]}
