--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -10,8 +10,8 @@ RUN rustup target add x86_64-unknown-linux-musl
 RUN apt-get update && apt-get install -y musl-tools
 RUN cargo build --release --target x86_64-unknown-linux-musl
 
-FROM scratch
-# FROM alpine
+# FROM scratch
+FROM alpine
 WORKDIR /app
 COPY --from=build /app/target/x86_64-unknown-linux-musl/release/eq-ala /app/eq-ala
 COPY --from=build /app/config /app/config
